--- a/LobotomyCorpWiki /index.html
+++ b/LobotomyCorpWiki /index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Lobotomy Corporation Wiki">
-  <meta name="keywords" content="Lobotomy, Corporation, Wiki, 游戏, 异常">
+  <meta name="description" content="Lobotomy Corporation Wiki - 详细的异常档案和部门介绍">
+  <meta name="keywords" content="Lobotomy, Corporation, Wiki, 异常, 部门, 游戏">
   <link rel="stylesheet" href="/styles.css">
   <title>Lobotomy Corporation Wiki</title>
 </head>
 <body>
   <header>
-    <h1>欢迎来到 Lobotomy Corporation Wiki</h1>
+    <h1>Lobotomy Corporation Wiki</h1>
     <nav>
       <ul>
         <li><a href="/LobotomyCorpWiki/abnormalities/">异常档案</a></li>
@@ -22,8 +22,8 @@
 
   <main>
     <section>
-      <h2>关于 Lobotomy Corporation</h2>
-      <p>这是一个关于 Lobotomy Corporation 游戏的资料库，详细记录了各种异常、部门和职员管理的内容。</p>
+      <h2>欢迎来到 Lobotomy Corporation Wiki</h2>
+      <p>这里是关于 Lobotomy Corporation 的详细资料库，涵盖了异常档案、部门介绍和职员管理的内容。</p>
     </section>
   </main>
 
